force-app/main/default/objects/Contact/fields/Additional_duties__c.field-meta.xml
<CustomField>
    <fullName>Additional_duties__c</fullName>
    <label>Additional duties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Family Contact/Client Representative</fullName>
            </value>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Receives invoices</fullName>
            </value>
            <value>
                <fullName>Pays invoices</fullName>
            </value>
            <value>
                <fullName>Completes Client Satisfaction Survey</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
                <isActive>false</isActive>
                <label>Initial Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>