force-app/main/default/objects/Contact/fields/Best_way_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Best_way_to_contact__c</fullName>
    <label>Best way to contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>