force-app/main/default/objects/Contact/fields/HowOftenTheyPreferToReceiveUpdates__c.field-meta.xml
<CustomField>
    <fullName>HowOftenTheyPreferToReceiveUpdates__c</fullName>
    <label>How often they prefer to receive updates</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After each visit</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Only if there is a change</fullName>
            </value>
            <value>
                <fullName>Emergency only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>