force-app/main/default/objects/Contact/fields/HowTheyPreferToCommunicate__c.field-meta.xml
<CustomField>
    <fullName>HowTheyPreferToCommunicate__c</fullName>
    <label>How they prefer to communicate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>Text message</fullName>
            </value>
            <value>
                <fullName>Portal / written summary</fullName>
            </value>
            <value>
                <fullName>No direct communication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>