force-app/main/default/objects/Contact/fields/Prospects_Referred__c.field-meta.xml
<CustomField>
    <fullName>Prospects_Referred__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prospects Referred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>