force-app/main/default/objects/Contact/fields/Records_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Records_Updated_On__c</fullName>
    <label>Records Updated On</label>
    <type>DateTime</type>
</CustomField>