force-app/main/default/objects/Contact/fields/Referral_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Type__c</fullName>
    <label>Referral Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Care Agency</fullName>
            </value>
            <value>
                <fullName>Home Healthcare</fullName>
            </value>
            <value>
                <fullName>Placement Company</fullName>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Independent Living</fullName>
            </value>
            <value>
                <fullName>Memory Care</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
            <value>
                <fullName>Legal Office</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Marketing email</fullName>
            </value>
            <value>
                <fullName>Word of Mouth (current/past client)</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Met at event</fullName>
            </value>
            <value>
                <fullName>Adult Day Care</fullName>
            </value>
            <value>
                <fullName>Place of Worship</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Personal Assistant/Family Consultant</fullName>
            </value>
            <value>
                <fullName>Private duty nurse</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Local Government Agency</fullName>
            </value>
            <value>
                <fullName>Private duty Caregivers</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Ability to add referral source types</fullName>
                <isActive>false</isActive>
                <label>Ability to add referral source types</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>