force-app/main/default/objects/Contact/fields/Relationship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Owner__c</fullName>
    <label>Relationship Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>