force-app/main/default/objects/Contact/fields/Use_Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Organization_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If unchecked, address will not be automatically updated from the Account. You can manually edit the address</inlineHelpText>
    <label>Use Organization Address</label>
    <type>Checkbox</type>
</CustomField>