force-app/main/default/objects/Contact/fields/WhatTheyWantToKnow__c.field-meta.xml
<CustomField>
    <fullName>WhatTheyWantToKnow__c</fullName>
    <label>What they want to know</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical updates</fullName>
            </value>
            <value>
                <fullName>Care plan changes</fullName>
            </value>
            <value>
                <fullName>Appointment updates</fullName>
            </value>
            <value>
                <fullName>Medication changes</fullName>
            </value>
            <value>
                <fullName>General check-ins</fullName>
            </value>
            <value>
                <fullName>Billing / payment-related updates</fullName>
            </value>
            <value>
                <fullName>Emergency-only updates</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>